2001-06-24  Kevin Finn  <kevinfinn@mediaone.net>

	* src/gnome/dialog-transfer.[ch]: reformatted my previous changes
	to 80 cols.  Added interface to specify whether description
	quickfill will be based on From or To account splits.  Enhance
	quickfill to also select the appropriate account in the account
	tree for the matched transaction.

	* src/gnome/window-reconcile.c: reformatted my previous changes to
	80 cols.  Change the auto interest xfer dialog so that it
	quickfills based on the reconcile account, rather than always on
	the From account.

2001-06-24  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* configure.in: Alex Zepeda's postgres configure patch

2001-06-23  Kevin Finn  <kevinfinn@mediaone.net>

	* src/gnome/window-reconcile.c: fix for display of auto end value
	updates.

2001-06-23  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-about.sgml: credits

	* AUTHORS: credits

	* configure.in: Bill Nottingham's guile configuration patch

2001-06-20  Dave Peticolas  <dave@krondo.com>

	* configure.in: better error messages. remove cruft.

2001-06-19  Dave Peticolas  <dave@krondo.com>

	* src/engine/gnc-numeric.c: use C comments.

	* src/engine/SchedXaction.[ch]: use C comments.

	* src/gnome/gnc-frequency.[ch]: use C comments. fix warnings

2001-06-19  Bill Gribble  <grib@billgribble.com>

	* src/scm/qif-import/qif-parse.scm: convert to gnc-numeric when 
	parsing, using string length as the precision

	* src/scm/qif-import/qif-to-gnc.scm: use gnc-numeric 
	math routines where necessary
	 
	* src/scm/qif-import/qif-file.scm: pass an equality test 
	predicate to check-and-parse-fields

	* src/scm/report/*: fix module reports to use-modules on 
	srfi-1 and slib where needed. 

2001-06-19  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-nextrun.h: add guards

	* src/gnome/dialog-nextrun.c: use C comments.

2001-06-19  Bill Gribble  <grib@billgribble.com>
